Modificado patrón de detección de fechas en la página de accesbilidad
Former-commit-id: 325789dbe4c5e5c21a64d5bb213a4a027d0bc473

--- a/oaw_2017_2018/portal/profiles/desarrollo/check.patterns.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/check.patterns.properties
@@ -6,11 +6,6 @@
 # * Los caracteres \ deben escaparse como \\
 ################################################################################################
 
-#Patrones de texto alternativo para niveles A, AA y AAA. Separados por , y con formato Java
-pattern.accesibility.alt.a=\\blevel\\s+a\\b,\\bnivell?\\s+a\\b, \\bwcag\\s+a\\b,\\baccesibilidad\\s+a\\b, \\bprioridad\\s+1\\b,\\bconformi(dad|tat)\\s+a\\b,\\bA\\s+\\(?simple\\s+A\\)?\\b,\\ba\\s+maila\\b,\\bReal\\s+Decreto\\s+1112\\/2018\\b,\\bEN\\s301\\s549\\b
-pattern.accesibility.alt.aa=\\blevel\\s+aa\\b,\\blevel\\s+double(\\s+|-)a\\b, \\bnivell?\\s+aa\\b,\\bnivell?\\s+doble(\\s+|-)a\\b, \\bwcag\\s+aa\\b,\\baccesibilidad\\s+aa\\b, \\bprioridad\\s+2\\b,\\bconformi(dad|tat)\\s+aa\\b,\\bconformi(dad|tat)\\s+.?doble(-|\\s+)a\\b,\\bAA\\s+\\(?doble\\s+A\\)?\\b, \\baa\\s+maila\\b,\\bdoble(\\s|-|_|\\/)a\\b,\\bReal\\s+Decreto\\s+1112\\/2018\\b,\\bEN\\s301\\s549\\b
-pattern.accesibility.alt.aaa=\\blevel\\s+aaa\\b,\\blevel\\s+triple(\\s+|-)a\\b, \\bnivell?\\s+aaa\\b,\\bnivell?\\s+triple(\\s|-)+a\\b, \\bwcag\\s+aaa\\b,\\baccesibilidad\\s+aaa\\b, \\bprioridad\\s+3\\b,\\bconformi(dad|tat)\\s+aaa\\b,\\bconformi(dad|tat)\\s+.?triple(-|\\s+)aa\\b,\\bAAA\\s+\\(?triple\\s+A\\)?\\b, \\baaa\\s+maila\\b,\\btriple(\\s|-|_|\\/)a\\b,\\bReal\\s+Decreto\\s+1112\\/2018\\b,\\bEN\\s301\\s549\\b
-
 # Check 100 Existen im\\u00E1genes cuyo atributo "alt" contiene el nombre del fichero
 check.100.regex.pattern.1      = ^imagen$$$|^dibujo$|^pintura$|^cuadro$|^figura$|^ilustraci\\u00F3n$|^foto$|^fotograf[\\u00ED|i]a$|^instant\\u00E1nea$|^retrato$|^captura$|^captura de pantalla$|^gr\\u00E1fico$|^gr\\u00E1fica$|^esquema$|^diagrama$|^miniatura$|^separador$|^espaciador$|^espacio$|^decorativa$|^ornamental$|^imagen decorativa$|^texto alternativo$|^descripci\\u00F3n$|^descripci\\u00F3n de la imagen$
 check.100.regex.pattern.2      = ^image$|^drawing$|^picture$|^painting$|^figure$|^illustration$|^photo$|^snapshot$|^snap$|^shot$|^shooting$|^photograph$|^photography$|^portrait$|^screenshot$|^graphic$|^graph$|^chart$|^diagram$|^scheme$|^diagram$|^thumb$|^thumbnail$|^separator$|^spacer$|^space$|^decorative$|^ornamental$|^decorative image$|^alternative text$|^description$|^image description$
@@ -42,7 +37,7 @@ check.148.regex.pattern.2      = contacto|contacte|contacta|contactar|contacte c
 check.148.regex.pattern.3      = \\w+@\\w+\\.\\w+
 check.149.regex.pattern.date.1 = \\D(\\d{1,2}[/\\.-]\\d{1,2}[/\\.-]\\d{4})\\D
 check.149.regex.pattern.date.2 = \\D(\\d{4}[/\\.-]\\d{1,2}[/\\.-]\\d{1,2})\\D
-check.149.regex.pattern.date.3 = (enero|febrero|marzo|abril|mayo|junio|julio|agosto|septiembre|octubre|noviembre|diciembre)\\s+del?\\s+(19|20)\\d{2}\\D
+check.149.regex.pattern.date.3 = (enero|febrero|marzo|abril|mayo|junio|julio|agosto|septiembre|octubre|noviembre|diciembre|gener|febrer|mar\u00E7|abril|maig|juny|juliol|agost|setembre|octubre|novembre|desembre|xaneiro|febreiro|marzo|abril|maio|xu\u00F1o|xullo|agosto|setembro|outubro|novembro|decembro)\\s+del?\\s+(19|20)\\d{2}\\D
 check.149.regex.pattern.date.4 = (enero|febrero|marzo|abril|mayo|junio|julio|agosto|septiembre|octubre|noviembre|diciembre|January|February|March|April|May|June|July|August|September|October|November|December)\\s+((0[1-9]|[1-9]|[12][0-9]|3[01])\\s*,)?\\s*(19|20)(\\d{2})\\D*
 check.149.regex.pattern.date.5 = (Gener|Febrer|Mar\u00E7|Abril|Maig|Juny|Juliol|Agost|Setembre|Octubre|Novembre|Desembre) +(0[1-9]|[1-9]|[12][0-9]|3[01])\\s*,\\s*(19|20)(\\d{2})\\D*
 check.149.regex.pattern.date.6 = (Xaneiro|Febreiro|Marzo|Abril|Maio|Xu\u00F1o|Xullo|Agosto|Setembro|Outubro|Novembro|decembro)\\s+del?\\s+(19|20)(\\d{2})\\D
