--- a/oaw_2017_2018/portal/profiles/integracion/check.patterns.properties
+++ b/oaw_2017_2018/portal/profiles/integracion/check.patterns.properties
@@ -51,7 +51,7 @@ check.148.regex.pattern.3=\\w+@\\w+\\.\\w+
 check.149.regex.pattern.value=accessibility|accesibilidad|accesibilitat|accessibilitat|accesibilidade|accessibilité|eskuragarritasuna|erabilerraztasunaren|irisgarritasuna|erabilerraztasuna|Erabilerraztasun
 check.149.regex.pattern.date.1=\\D(\\d{1,2}[/\\.-]\\d{1,2}[/\\.-]\\d{4})\\D
 check.149.regex.pattern.date.2=\\D(\\d{4}[/\\.-]\\d{1,2}[/\\.-]\\d{1,2})\\D
-check.149.regex.pattern.date.3=(enero|febrero|marzo|abril|mayo|junio|julio|agosto|septiembre|octubre|noviembre|diciembre)\\s+del?\\s+(19|20)\\d{2}\\D
+check.149.regex.pattern.date.3=(enero|febrero|marzo|abril|mayo|junio|julio|agosto|septiembre|octubre|noviembre|diciembre|gener|febrer|mar\u00E7|abril|maig|juny|juliol|agost|setembre|octubre|novembre|desembre|xaneiro|febreiro|marzo|abril|maio|xu\u00F1o|xullo|agosto|setembro|outubro|novembro|decembro)\\s+del?\\s+(19|20)\\d{2}\\D
 check.149.regex.pattern.date.4=(enero|febrero|marzo|abril|mayo|junio|julio|agosto|septiembre|octubre|noviembre|diciembre|January|February|March|April|May|June|July|August|September|October|November|December)\\s+((0[1-9]|[1-9]|[12][0-9]|3[01])\\s*,)?\\s*(19|20)(\\d{2})\\D*
 check.149.regex.pattern.date.5=(Gener|Febrer|Març|Abril|Maig|Juny|Juliol|Agost|Setembre|Octubre|Novembre|Desembre) +(0[1-9]|[1-9]|[12][0-9]|3[01])\\s*,\\s*(19|20)(\\d{2})\\D*
 check.149.regex.pattern.date.6=(Xaneiro|Febreiro|Marzo|Abril|Maio|Xuño|Xullo|Agosto|Setembro|Outubro|Novembro|decembro)\\s+del?\\s+(19|20)(\\d{2})\\D
