Update nginx configuration fron JS engine
Update JS Renderer

Update timeout on conectivity test


Former-commit-id: 34427995fd103b89640027ec9c651ed6e2b08ba0

--- a/motor-js/renderer/Dockerfile
+++ b/motor-js/renderer/Dockerfile
@@ -13,7 +13,7 @@ RUN apk add --no-cache \
 COPY prerender/ /opt/prerender/
 
 # Dependencias necesarias
-RUN ls -la /opt/prerender && cd /opt/prerender && npm install --save
+RUN cd /opt/prerender && npm install --save
 
 #Permisos
 RUN chmod -R 777 /opt/prerender/
