--- a/motor-js/nginx/reverse.conf
+++ b/motor-js/nginx/reverse.conf
@@ -32,7 +32,7 @@ server {
 		if ($arg_url ~* '\.ppt') { set $prerender 0; }
 		if ($arg_url ~* '\.pptx') { set $prerender 0; }		
 		
-		resolver proxy.redsara.es;
+		resolver 10.253.252.21;
     
 		if ($prerender = 1) {
 			set $prerenderServer "renderer-server";
@@ -77,7 +77,7 @@ server {
 		if ($request_uri ~* '\.ppt') { set $prerender 0; }
 		if ($request_uri ~* '\.pptx') { set $prerender 0; }		
 		
-		resolver proxy.redsara.es;
+		resolver 10.253.252.21;
     
 		if ($prerender = 1) {
 			set $prerenderServer "renderer-server";
