--- a/portal/profiles/desarrollo/mail.properties
+++ b/portal/profiles/desarrollo/mail.properties
@@ -1,5 +1,5 @@
 # Par\u00E1metros para el env\u00EDo de correos
-mail.transport.protocol = sim
+mail.transport.protocol = smtp
 mail.smtp.host = smtp.fundacionctic.org
 mail.smtp.port =
 mail.smtp.sslport=
