--- a/portal/profiles/integracion/propertiesmanager.properties
+++ b/portal/profiles/integracion/propertiesmanager.properties
@@ -1,4 +1,4 @@
-properties.files=mail, crawler.core, crawler, pdf, check, intav, language, management, returnPaths, role, certificados, basic.service.default, basic.service
+properties.files=mail, crawler.core, crawler, pdf, check, intav, language, management, returnPaths, role, certificados, basic.service.default, basic.service, check.patterns
 
 key.mail= mail.properties
 file.mail=file:///opt/usuarios/oaw/properties/mail.properties
@@ -38,4 +38,5 @@ file.basic.service=file:///opt/usuarios/oaw/properties/basic.service.properties
 
 file.descriptions=file:///opt/usuarios/oaw/properties/check.descriptions.properties
 
-check.patterns.properties=file:///opt/usuarios/oaw/properties/check.patterns.properties
+key.check.patterns=check.patterns.properties
+file.check.patterns=file:///opt/usuarios/oaw/properties/check.patterns.properties
