Improve conectivity page
Fix error on renderer


Former-commit-id: cfb1567fced135d133c6606b9844a4deb0eede1c

--- a/portal/profiles/desarrollo/mail.properties
+++ b/portal/profiles/desarrollo/mail.properties
@@ -13,7 +13,7 @@ error.mail.message.subject = [OAW] Error en el rastreo Rastreador Web MINHAP
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 
-incomplete.crawler.subject = [OAW] Rastreo inacabado {0}
+incomplete.crawler.subject = [DESA] Rastreo inacabado {0}
 incomplete.crawler.text = El rastreo para {0} ha devuelto solo {1} resultados
 incomplete.crawler.emails = alvaro.pelaez@fundacionctic.org
 incomplete.crawler.warning.emails = alvaro.pelaez@fundacionctic.org
@@ -31,3 +31,6 @@ sim.user.username = observ.accesibilidad
 sim.user.password = OAW,16.SIM
 sim.mailservice.id= 942
 
+# Mensajes de error en la aplicacion (movido de crawler.properties)
+alert.from.subject = [DESA] Error en la aplicaci\u00F3n del Rastreador
+warning.administrator.message = Se le ha enviado este correo para avisarle de que ha tenido lugar un error irrecuperable en el Rastreador Web:
