Export/import seed process moidified to include id on xml file and use this id to import
Former-commit-id: ff6ecf07e5730c07772662c1b085c6152bd4e978

--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -264,6 +264,8 @@ cargar.semilla.observatorio.categoria     = Segmento
 cargar.semilla.observatorio.complejidad   = Complejidad
 cargar.semilla.observatorio.nombre        = Nombre
 cargar.semilla.observatorio.nueva.semilla = Nueva Semilla
+cargar.semilla.observatorio.exportar.todo = Exportar
+cargar.semilla.observatorio.importar.todo = Importar
 cargar.semilla.observatorio.operaciones   = Operaciones
 
 cartucho.duplicado     = Cartucho ya existente.
