--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -878,6 +878,8 @@ cargar.semilla.observatorio.categoria = Segmento
 cargar.semilla.observatorio.activa = Activa
 cargar.semilla.observatorio.operaciones = Operaciones
 cargar.semilla.observatorio.nueva.semilla = Nueva Semilla
+cargar.semilla.observatorio.exportar.todo = Exportar
+cargar.semilla.observatorio.importar.todo = Importar
 anadir.semilla = A\u00F1adir Semilla
 
 gestion.resultados.observatorio = Resultados Observatorio
