Export/import seed process moidified to include id on xml file and use this id to import
Former-commit-id: 05d0128b40602decd21d39b60999655568e23984

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -3527,3 +3527,8 @@ minhap.observatory.3_0.subgroup.2.6 = 2.6 Navegaci\u00F3n consistente
 
 observatorio.puntuacion.prioridad.1 = Puntuaci\u00F3n Media Prioridad 1
 observatorio.puntuacion.prioridad.2 =  Puntuaci\u00F3n Media Prioridad 2
+
+
+importar.semillas.title = Importación masiva de semillas
+importar.semillas.info = Se van a realizar los siguientes cambios:
+importar.semillas.info2 = ¿Desea continuar con la importación?
