Import summary before save seeds
Former-commit-id: 4fd6223dbf99ba884b8bab549134678ee2af0f46

--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -260,6 +260,12 @@ caracteres.prohibidos = No se pueden usar caract\u00E9res ilegales. S\u00F3lo al
 cargar.observatorio.vacio                 = Volver
 cargar.rastreos.vacio                     = Volver
 cargar.semilla.observatorio.activa        = Activa
+cargar.semilla.observatorio.acronimo = Acr\u00F3nimo
+cargar.semilla.observatorio.dependencia = Dependencia
+cargar.semilla.observatorio.urls = URLs
+cargar.semilla.observatorio.total = Se van a actualizar un total de <strong>{0}</strong> semillas
+cargar.semilla.observatorio.total.nuevas = Se van a crear un total de <strong>{0}</strong> semillas
+cargar.semilla.observatorio.directorio = Directorio
 cargar.semilla.observatorio.categoria     = Segmento
 cargar.semilla.observatorio.complejidad   = Complejidad
 cargar.semilla.observatorio.nombre        = Nombre
@@ -1308,6 +1314,9 @@ no = NO
 no.select        = Debe seleccionar un elemento.
 no.txt           = El formato del archivo debe ser .txt.
 no.xml.file      = El fichero no es v\u00E1lido. Debe subir un fichero xml.
+
+xml.import.success = Semillas importadas correctamente
+xml.import.error = Error al importar las semillas 
 
 norma.para.intav = (Para el cartucho INTAV)
 
@@ -3443,3 +3452,4 @@ welcome.action.message.see.crawlings       = Ver los resultados de los rastreos 
 welcome.common.message                     = Esta es la aplicaci\u00F3n Rastreador Web de MINHAP. Las acciones que, con su perfil, podr\u00E1 llevar a cabo son:
 
 xml.size.error = Fichero demasiado grande.
+xml.seed.not.valid = El fichero no contiene elementos válidos
