--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -126,6 +126,9 @@ C=Configurador
 initial.page = P\u00E1gina de Inicio
 accesibility.of = Informe de Accesibilidad de
 
+xml.import.success = Semillas importadas correctamente
+xml.import.error = Error al importar las semillas 
+
 no.xml.file = El fichero no es v\u00E1lido. Debe subir un fichero xml.
 xml.size.error = Fichero demasiado grande.
 observatorio.no.resultados = El observatorio seleccionado no tiene resultados.
@@ -876,11 +879,17 @@ cargar.semilla.observatorio.nombre = Nombre
 cargar.semilla.observatorio.complejidad = Complejidad
 cargar.semilla.observatorio.categoria = Segmento
 cargar.semilla.observatorio.activa = Activa
+cargar.semilla.observatorio.acronimo = Acr\u00F3nimo
+cargar.semilla.observatorio.dependencia = Dependencia
+cargar.semilla.observatorio.urls = URLs
+cargar.semilla.observatorio.directorio = Directorio
 cargar.semilla.observatorio.operaciones = Operaciones
 cargar.semilla.observatorio.nueva.semilla = Nueva Semilla
 cargar.semilla.observatorio.exportar.todo = Exportar
 cargar.semilla.observatorio.importar.todo = Importar
 anadir.semilla = A\u00F1adir Semilla
+cargar.semilla.observatorio.total = Se van a actualizar un total de <strong>{0}</strong> semillas
+cargar.semilla.observatorio.total.nuevas = Se van a crear un total de <strong>{0}</strong> semillas
 
 gestion.resultados.observatorio = Resultados Observatorio
 resultados.observatorio.cualquier.complejidad = Cualquiera
