Import seed summary
Former-commit-id: ed22c573267d7294bd4ff63d78d1a6297f1f2a59

--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -263,8 +263,12 @@ cargar.semilla.observatorio.activa        = Activa
 cargar.semilla.observatorio.acronimo = Acr\u00F3nimo
 cargar.semilla.observatorio.dependencia = Dependencia
 cargar.semilla.observatorio.urls = URLs
+cargar.semilla.nuevas.title = Nuevas
+cargar.semilla.inalterables.title = Inalteradas
+cargar.semilla.actualizables.title = Actualizadas
 cargar.semilla.observatorio.total = Se van a actualizar un total de <strong>{0}</strong> semillas
 cargar.semilla.observatorio.total.nuevas = Se van a crear un total de <strong>{0}</strong> semillas
+cargar.semilla.observatorio.total.sincambios = No se van a alterar un total de <strong>{0}</strong> semillas
 cargar.semilla.observatorio.directorio = Directorio
 cargar.semilla.observatorio.categoria     = Segmento
 cargar.semilla.observatorio.complejidad   = Complejidad
@@ -3453,3 +3457,8 @@ welcome.common.message                     = Esta es la aplicaci\u00F3n Rastread
 
 xml.size.error = Fichero demasiado grande.
 xml.seed.not.valid = El fichero no contiene elementos válidos
+
+
+importar.semillas.title = Importaci\u00F3nn masiva de semillas
+importar.semillas.info = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
+importar.semillas.info2 = ¿Desea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3nn <strong>no se puede deshacer</strong>
