--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -888,8 +888,12 @@ cargar.semilla.observatorio.nueva.semilla = Nueva Semilla
 cargar.semilla.observatorio.exportar.todo = Exportar
 cargar.semilla.observatorio.importar.todo = Importar
 anadir.semilla = A\u00F1adir Semilla
+cargar.semilla.nuevas.title = Nuevas
+cargar.semilla.inalterables.title = Inalteradas
+cargar.semilla.actualizables.title = Actualizadas
 cargar.semilla.observatorio.total = Se van a actualizar un total de <strong>{0}</strong> semillas
 cargar.semilla.observatorio.total.nuevas = Se van a crear un total de <strong>{0}</strong> semillas
+cargar.semilla.observatorio.total.sincambios = No se van a alterar un total de <strong>{0}</strong> semillas
 
 gestion.resultados.observatorio = Resultados Observatorio
 resultados.observatorio.cualquier.complejidad = Cualquiera
@@ -3538,6 +3542,6 @@ observatorio.puntuacion.prioridad.1 = Puntuaci\u00F3n Media Prioridad 1
 observatorio.puntuacion.prioridad.2 =  Puntuaci\u00F3n Media Prioridad 2
 
 
-importar.semillas.title = Importación masiva de semillas
-importar.semillas.info = Se van a realizar los siguientes cambios:
-importar.semillas.info2 = ¿Desea continuar con la importación?
+importar.semillas.title = Importaci\u00F3nn masiva de semillas
+importar.semillas.info = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
+importar.semillas.info2 = ¿Desea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3nn <strong>no se puede deshacer</strong> 
