UNE-EN2019 cartidge
New checks implementation

Modified score OP to 0.5P only in UNE-EN2019 cartidge


Former-commit-id: 9c58925e5842dd7e944f7a67aed71e44a14a0ef0

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -942,6 +942,7 @@ resultados.observatorio.vista.primaria.valor = Valor
 resultados.observatorio.vista.primaria.puntuacion.media = Puntuaci\u00F3n media
 resultados.observatorio.vista.primaria.valor.uno = 1
 resultados.observatorio.vista.primaria.valor.cero = 0
+resultados.observatorio.vista.primaria.valor.cero.pasa = 0
 resultados.observatorio.vista.primaria.valor.noResultado = No hay resultados
 resultados.observatorio.vista.primaria.valor.noPuntua = No punt\u00FAa
 resultados.observatorio.vista.primaria.modalidad.verde = verde
