--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -2682,6 +2682,7 @@ resultados.observatorio.vista.primaria.url                       = URL
 resultados.observatorio.vista.primaria.vacio                     = No hay puntuaciones disponibles
 resultados.observatorio.vista.primaria.valor                     = Valor
 resultados.observatorio.vista.primaria.valor.cero                = 0
+resultados.observatorio.vista.primaria.valor.cero.pasa			 = 0
 resultados.observatorio.vista.primaria.valor.noPuntua            = No punt\u00FAa
 resultados.observatorio.vista.primaria.valor.noResultado         = No hay resultados
 resultados.observatorio.vista.primaria.valor.uno                 = 1
