--- a/portal/profiles/integracion/crawler.properties
+++ b/portal/profiles/integracion/crawler.properties
@@ -75,7 +75,7 @@ periodicidad.rastreo = 5
 periodicidad.max = 30
 numRastreos.max = 10
 
-xml.file.max.size = 500000
+xml.file.max.size = 1500000
 
 export.open.office.graphic.noResults = ${deploy.path}/WEB-INF/templatesODT/NoResult.jpg
 export.open.office.template.une.2004.CCAA = ${deploy.path}/WEB-INF/templatesODT/observatorio_ccaa_2004_blank.odt
