Added ambit field to seeds
Former-commit-id: e69a23936df7add89cd193a601c59f047c3d1586

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -1324,6 +1324,7 @@ nueva.semilla.webs.informacion = Informaci\u00F3n
 nueva.semilla.webs.introduccion.url = Introducci\u00F3n de URL's
 nueva.semilla.webs.lista.url = Lista de URL's:
 nueva.semilla.webs.categoria = Segmento
+nueva.semilla.webs.ambito = Ambito
 nueva.semilla.webs.complejidad = Complejidad
 
 borrar.semilla.busqueda.nombre = Nombre
