--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -1381,6 +1381,7 @@ nueva.semilla.observatorio.url           = URL
 #Informaci\u00F3nNueva Semilla
 nueva.semilla.webs                       = Nueva Semilla
 nueva.semilla.webs.categoria             = Segmento
+nueva.semilla.webs.ambito            	 = Ambito
 nueva.semilla.webs.complejidad           = Complejidad
 nueva.semilla.webs.info                  = Se introducir\u00E1 una URL en cada l\u00EDnea. S\u00F3lamente las URLs v\u00E1lidas ser\u00E1n incluidas en el archivo.
 nueva.semilla.webs.informacion           = Informaci\u00F3n
