--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -765,6 +765,7 @@ nuevo.observatorio.title = Nuevo Observatorio
 nuevo.observatorio = Nuevo Observatorio
 nuevo.observatorio.nombre = Nombre
 nuevo.observatorio.tipo = Tipo
+nuevo.observatorio.ambito                     = \u00C1mbito
 nuevo.observatorio.activo = Activo
 nuevo.observatorio.cartucho = Cartucho
 nuevo.observatorio.categoria = Segmento asociado
