Added complexity field
Former-commit-id: 2643f86a1d58c3ad2fdbbfc3c707244396eeb836

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -390,6 +390,8 @@ migas.nueva.semilla.observatorio = Nueva Semilla
 migas.editar.semillas.observatorio = Editar Semilla
 migas.eliminar.semillas.observatorio = Eliminar Semilla
 migas.dependencias.observatorio = Dependencias
+migas.nueva.complejidad.observatorio = Nueva complejidad
+migas.complejidades.observatorio = Complejidades
 migas.nueva.dependencia.observatorio = Nueva dependencia
 migas.cartucho = Cartucho
 migas.editar.cartucho = Editar Cartucho
@@ -871,6 +873,15 @@ mensaje.exito.dependencia.generada = Dependencia generada con \u00E9xito.
 mensaje.exito.dependencia.eliminada = Dependencia eliminada con \u00E9xito.
 mensaje.error.nombre.dependencia.obligatorio= El nombre de la dependencia es obligatorio
 
+gestion.complejidades.observatorio = Gesti\u00F3n de Complejidades del Observatorio
+gestion.complejidades.observatorio.titulo = Gesti\u00F3n de Complejidades del Observatorio
+nueva.complejidad.observatorio.nombre = Nombre de la complejidad
+nueva.complejidad.observatorio = Nueva complejidad
+mensaje.error.nombre.complejidad.duplicado = Nombre de complejidad ya existente
+mensaje.exito.complejidad.generada = Complejidad generada con \u00E9xito.
+mensaje.exito.complejidad.eliminada = Complejidad eliminada con \u00E9xito.
+mensaje.error.nombre.complejidad.obligatorio= El nombre de la complejidad es obligatorio
+
 eliminar.semilla.observatorio = Eliminar Semilla del Observatorio
 eliminar.semilla.observatorio.desactivado = Eliminar Semilla Desactivado
 anadir.semilla.observatorio = A\u00F1adir Semilla al Observatorio
@@ -1174,6 +1185,9 @@ menu.config.observatory.title = Observatorio
 
 menu.config.dependencias = Dependencias
 menu.config.dependencias.title = Dependencias asociadas a semillas
+
+menu.config.complejidades  = Complejidades
+menu.config.complejidades.title = Complejidades asociadas a semillas
 
 menuadmin.conectividad = Conectividad
 menuadmin.conectividad.title = Comprobaci\u00F3n de la conectividad con servicios externos
