--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -896,6 +896,8 @@ mensaje.error.noCartuchos                                     = No puede crear u
 mensaje.error.noPermisos                                      = No tiene permisos sobre el Rastreo seleccionado.
 mensaje.error.nombre.dependencia.duplicado                    = Nombre de dependencia ya existente
 mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la dependencia es obligatorio
+mensaje.error.nombre.complejidad.duplicado                    = Nombre de complejidad ya existente
+mensaje.error.nombre.complejidad.obligatorio                  = El nombre de la complejidad es obligatorio
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
@@ -921,6 +923,8 @@ mensaje.exito.cuenta.usuario.editada                          = Cuenta cliente m
 mensaje.exito.cuenta.usuario.eliminado                        = Cuenta Cliente Eliminada con exito. 
 mensaje.exito.dependencia.eliminada                           = Dependencia eliminada con \u00E9xito.
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito.
+mensaje.exito.complejidad.eliminada                           = Complejidad eliminada con \u00E9xito.
+mensaje.exito.complejidad.generada                            = Complejidad generada con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
 mensaje.exito.observatorio                                    = Nuevo Observatorio creado con \u00E9xito.
@@ -956,6 +960,8 @@ mensaje.numero.certificados                                   = En estos momento
 
 menu.config.dependencias                      = Dependencias
 menu.config.dependencias.title                = Dependencias asociadas a semillas
+menu.config.complejidades                     = Complejidades
+menu.config.complejidades.title               = Complejidades asociadas a semillas
 menu.config.observatory                       = Observatorio
 menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
@@ -1047,6 +1053,7 @@ migas.config.malware.d                                   = Configuraci\u00F3n de
 migas.cuenta.cliente                                     = Cuenta Cliente
 migas.cuentas.cliente                                    = Cuentas Cliente
 migas.dependencias.observatorio                          = Dependencias
+migas.complejidades.observatorio                         = Complejidades
 migas.desinstalar.cartucho                               = Desinstalar Cartucho
 migas.diagnostico                                        = Servicio de Diagn\u00F3stico
 migas.edit.file.malware                                  = Editar fichero
@@ -1357,6 +1364,8 @@ nueva.cuenta.cliente.urls.info           = (Las urls introducidas deber\u00E1n s
 nueva.cuenta.cliente.usuarios            = Usuarios
 nueva.dependencia.observatorio           = Nueva dependencia
 nueva.dependencia.observatorio.nombre    = Nombre de la dependencia
+nueva.complejidad.observatorio           = Nueva complejidad
+nueva.complejidad.observatorio.nombre    = Nombre de la complejidad
 nueva.semilla.google                     = Nueva semilla
 nueva.semilla.google.info                = (Se extraer\u00E1n 10 resultados por cada p\u00E1gina)
 nueva.semilla.google.nombreSemilla       = Nombre de la Semilla:
