Fix graphics results
Former-commit-id: c245b169638f06a4203274a051ee543c4e88ca75

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2651,7 +2651,7 @@ resultados.anonimos.presentacion                                 = Presentaci\u0
 resultados.anonimos.punt.media                                   = Puntuaci\u00F3n Media
 resultados.anonimos.punt.portales                                = Puntuaci\u00F3n Media de Portales
 resultados.anonimos.punt.portales.a                              = A
-resultados.anonimos.punt.portales.aa                             = A y 2
+resultados.anonimos.punt.portales.aa                             = AA
 resultados.anonimos.punt.portales.nv                             = No V\u00E1lido
 resultados.anonimos.punt.portales.parcial                        = No V\u00E1lido
 resultados.anonimos.punto.verification                           = Punto de Verificaci\u00F3n
