Added complexity interface and it's actions
Former-commit-id: a3c71a50f44fde41ec309e08666de59291538c1a

--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -897,7 +897,8 @@ mensaje.error.noPermisos                                      = No tiene permiso
 mensaje.error.nombre.dependencia.duplicado                    = Nombre de dependencia ya existente
 mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la dependencia es obligatorio
 mensaje.error.nombre.complejidad.duplicado                    = Nombre de complejidad ya existente
-mensaje.error.nombre.complejidad.obligatorio                  = El nombre de la complejidad es obligatorio
+mensaje.error.nombre.complejidad.obligatorio                  = Todos los campos son obligatorios
+mensaje.error.campos.complejidad.numericos					  = Profundidad y amplitud deben ser números positivos
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
@@ -1366,6 +1367,8 @@ nueva.dependencia.observatorio           = Nueva dependencia
 nueva.dependencia.observatorio.nombre    = Nombre de la dependencia
 nueva.complejidad.observatorio           = Nueva complejidad
 nueva.complejidad.observatorio.nombre    = Nombre de la complejidad
+nueva.complejidad.observatorio.profundidad    = Profundidad
+nueva.complejidad.observatorio.amplitud    = Amplitud
 nueva.semilla.google                     = Nueva semilla
 nueva.semilla.google.info                = (Se extraer\u00E1n 10 resultados por cada p\u00E1gina)
 nueva.semilla.google.nombreSemilla       = Nombre de la Semilla:
