--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -877,12 +877,14 @@ mensaje.error.nombre.dependencia.obligatorio= El nombre de la dependencia es obl
 gestion.complejidades.observatorio = Gesti\u00F3n de Complejidades del Observatorio
 gestion.complejidades.observatorio.titulo = Gesti\u00F3n de Complejidades del Observatorio
 nueva.complejidad.observatorio.nombre = Nombre de la complejidad
+nueva.complejidad.observatorio.profundidad    = Profundidad
+nueva.complejidad.observatorio.amplitud    = Amplitud
 nueva.complejidad.observatorio = Nueva complejidad
 mensaje.error.nombre.complejidad.duplicado = Nombre de complejidad ya existente
 mensaje.exito.complejidad.generada = Complejidad generada con \u00E9xito.
 mensaje.exito.complejidad.eliminada = Complejidad eliminada con \u00E9xito.
-mensaje.error.nombre.complejidad.obligatorio= El nombre de la complejidad es obligatorio
-
+mensaje.error.nombre.complejidad.obligatorio = Todos los campos son obligatorios
+mensaje.error.campos.complejidad.numericos	= Profundidad y amplitud deben ser números positivos
 eliminar.semilla.observatorio = Eliminar Semilla del Observatorio
 eliminar.semilla.observatorio.desactivado = Eliminar Semilla Desactivado
 anadir.semilla.observatorio = A\u00F1adir Semilla al Observatorio
