--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -3473,3 +3473,24 @@ xml.seed.not.valid = El fichero no contiene elementos válidos
 importar.semillas.title = Importaci\u00F3nn masiva de semillas
 importar.semillas.info = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
 importar.semillas.info2 = ¿Desea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3nn <strong>no se puede deshacer</strong>
+
+minhap.observatory.5_0.subgroup.1.1  = 1.1 Existencia de alternativas textuales
+minhap.observatory.5_0.subgroup.1.10 = 1.10 Formularios y estructura
+minhap.observatory.5_0.subgroup.1.11 = 1.11 T\u00EDtulo de p\u00E1gina y de marcos
+minhap.observatory.5_0.subgroup.1.12 = 1.12 Enlaces descriptivos
+minhap.observatory.5_0.subgroup.1.13 = 1.13 Cambios de contexto
+minhap.observatory.5_0.subgroup.1.14 = 1.14 Compatibilidad
+minhap.observatory.5_0.subgroup.1.2  = 1.2 Uso de encabezados
+minhap.observatory.5_0.subgroup.1.3  = 1.3 Uso de listas
+minhap.observatory.5_0.subgroup.1.4  = 1.4 Tablas de datos
+minhap.observatory.5_0.subgroup.1.5  = 1.5 Agrupaci\u00F3n estructural
+minhap.observatory.5_0.subgroup.1.6  = 1.6 Separaci\u00F3n de contenido y presentaci\u00F3n
+minhap.observatory.5_0.subgroup.1.7  = 1.7 Identificaci\u00F3n del idioma principal
+minhap.observatory.5_0.subgroup.1.8  = 1.8 Navegaci\u00F3n con javascript accesible y control de usuario
+minhap.observatory.5_0.subgroup.1.9  = 1.9 Formularios y etiquetas
+minhap.observatory.5_0.subgroup.2.1  = 2.1 Identificaci\u00F3n de los cambios de idioma
+minhap.observatory.5_0.subgroup.2.2  = 2.2 Legibilidad y contraste
+minhap.observatory.5_0.subgroup.2.3  = 2.3 Maquetaci\u00F3n adaptable
+minhap.observatory.5_0.subgroup.2.4  = 2.4 M\u00FAltiples v\u00EDas de navegaci\u00F3n
+minhap.observatory.5_0.subgroup.2.5  = 2.5 Independencia del dispositivo
+minhap.observatory.5_0.subgroup.2.6  = 2.6 Navegaci\u00F3n consistente
