--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -12,7 +12,7 @@
 # you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863
 #-------------------------------------------------------------------------------
 
-//resultados.primarios.5.p2 = Por lo tanto de forma r\u00E1pida y visual se puede ver para una determinada verificaci\u00F3n en qu\u00E9 p\u00E1ginas hay que concentrar esfuerzos para mejorar los resultados del observatorio (aquellas con modalidad Falla o puntuaci\u00F3n cero). Una p\u00E1gina tendr\u00E1 Valor "0" y Modalidad "Pasa" cuando tenga alg\u00FAn problema menor de accesibilidad. Esto quiere decir que hay alg\u00FAn aspecto que corregir pero no es tan grave como para asignarle modalidad "Falla". Para mejorar la accesibilidad los primeros esfuerzos se deben dedicar a solucionar los problemas que originan modalidad "Falla".
+resultados.primarios.5.p2 = Por lo tanto de forma r\u00E1pida y visual se puede ver para una determinada verificaci\u00F3n en qu\u00E9 p\u00E1ginas hay que concentrar esfuerzos para mejorar los resultados del observatorio (aquellas con modalidad Falla o puntuaci\u00F3n cero). Una p\u00E1gina tendr\u00E1 Valor "0" y Modalidad "Pasa" cuando tenga alg\u00FAn problema menor de accesibilidad. Esto quiere decir que hay alg\u00FAn aspecto que corregir pero no es tan grave como para asignarle modalidad "Falla". Para mejorar la accesibilidad los primeros esfuerzos se deben dedicar a solucionar los problemas que originan modalidad "Falla".
 
 0 = 0
 
