Added tag maintenance
Former-commit-id: 56720a7fe552531b2836d685856f28c522fd241d

--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -519,6 +519,8 @@ error.confirmacion.password              = Confirmar Password
 error.connecting.url                     = No se ha podido conectar a la URL especificada
 error.cuenta.usuario                     = Cuenta Cliente
 error.dependendencia                     = Dependencia
+error.etiqueta                     = Etiqueta
+error.etiqueta                     = Clasificacion
 error.dom                                = \u00C1rboles DOM
 error.dom.confidence                     = Confianza \u00C1rboles DOM
 error.dom.weight                         = Peso \u00C1rboles DOM
@@ -899,6 +901,9 @@ mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la 
 mensaje.error.nombre.complejidad.duplicado                    = Nombre de complejidad ya existente
 mensaje.error.nombre.complejidad.obligatorio                  = Todos los campos son obligatorios
 mensaje.error.campos.complejidad.numericos					  = Profundidad y amplitud deben ser números positivos
+mensaje.error.nombre.etiqueta.duplicado                    = Nombre de etiqueta ya existente
+mensaje.error.nombre.etiqueta.obligatorio                  = Todos los campos son obligatorios
+mensaje.exito.etiqueta.generada								= Etiqueta generada con \u00E9xito.
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
@@ -926,6 +931,8 @@ mensaje.exito.dependencia.eliminada                           = Dependencia elim
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito.
 mensaje.exito.complejidad.eliminada                           = Complejidad eliminada con \u00E9xito.
 mensaje.exito.complejidad.generada                            = Complejidad generada con \u00E9xito.
+mensaje.exito.etiqueta.eliminada                           = Etiqueta eliminada con \u00E9xito.
+mensaje.exito.etiqueta.generada                            = Etiqueta generada con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
 mensaje.exito.observatorio                                    = Nuevo Observatorio creado con \u00E9xito.
@@ -963,6 +970,8 @@ menu.config.dependencias                      = Dependencias
 menu.config.dependencias.title                = Dependencias asociadas a semillas
 menu.config.complejidades                     = Complejidades
 menu.config.complejidades.title               = Complejidades asociadas a semillas
+menu.config.etiquetas                     = Etiquetas
+menu.config.etiquetas.title               = Etiquetas asociadas a semillas
 menu.config.observatory                       = Observatorio
 menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
@@ -1055,6 +1064,7 @@ migas.cuenta.cliente                                     = Cuenta Cliente
 migas.cuentas.cliente                                    = Cuentas Cliente
 migas.dependencias.observatorio                          = Dependencias
 migas.complejidades.observatorio                         = Complejidades
+migas.etiquetas.observatorio                         = Etiquetas
 migas.desinstalar.cartucho                               = Desinstalar Cartucho
 migas.diagnostico                                        = Servicio de Diagn\u00F3stico
 migas.edit.file.malware                                  = Editar fichero
@@ -1369,6 +1379,11 @@ nueva.complejidad.observatorio           = Nueva complejidad
 nueva.complejidad.observatorio.nombre    = Nombre de la complejidad
 nueva.complejidad.observatorio.profundidad    = Profundidad
 nueva.complejidad.observatorio.amplitud    = Amplitud
+nueva.etiqueta.observatorio           	= Nueva etiqueta
+nueva.etiqueta.observatorio.nombre    	= Nombre de la etiqueta
+nueva.etiqueta.observatorio.tematica    = Tematica
+nueva.etiqueta.observatorio.distribucion    = Distribucion
+nueva.etiqueta.observatorio.recurrencia    = Recurrencia
 nueva.semilla.google                     = Nueva semilla
 nueva.semilla.google.info                = (Se extraer\u00E1n 10 resultados por cada p\u00E1gina)
 nueva.semilla.google.nombreSemilla       = Nombre de la Semilla:
@@ -1394,6 +1409,13 @@ nueva.semilla.observatorio.url           = URL
 nueva.semilla.webs                       = Nueva Semilla
 nueva.semilla.webs.categoria             = Segmento
 nueva.semilla.webs.complejidad           = Complejidad
+nueva.semilla.webs.etiqueta           = Etiqueta
+nueva.semilla.webs.tematica           = Tematica
+nueva.semilla.webs.clasificacion           = Clasificacion
+nueva.semilla.webs.distribucion           = Distribucion
+nueva.semilla.webs.recurrencia           = Recurrencia
+
+nueva.semilla.webs.etiqueta           = Etiqueta
 nueva.semilla.webs.info                  = Se introducir\u00E1 una URL en cada l\u00EDnea. S\u00F3lamente las URLs v\u00E1lidas ser\u00E1n incluidas en el archivo.
 nueva.semilla.webs.informacion           = Informaci\u00F3n
 nueva.semilla.webs.introduccion.url      = Introducci\u00F3n de URL's
