--- a/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
+++ b/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
@@ -519,6 +519,8 @@ error.confirmacion.password              = Confirmar Password
 error.connecting.url                     = No se ha podido conectar a la URL especificada
 error.cuenta.usuario                     = Cuenta Cliente
 error.dependendencia                     = Dependencia
+error.etiqueta                     = Etiqueta
+error.etiqueta                     = Clasificacion
 error.dom                                = \u00C1rboles DOM
 error.dom.confidence                     = Confianza \u00C1rboles DOM
 error.dom.weight                         = Peso \u00C1rboles DOM
@@ -925,6 +927,8 @@ mensaje.exito.cuenta.usuario.eliminado                        = Cuenta Cliente E
 mensaje.exito.dependencia.eliminada                           = Dependencia eliminada con \u00E9xito.
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito.
 mensaje.exito.complejidad.eliminada                           = Complejidad eliminada con \u00E9xito.
+mensaje.exito.etiqueta.eliminada                           = Etiqueta eliminada con \u00E9xito.
+mensaje.exito.etiqueta.generada                            = Etiqueta generada con \u00E9xito.
 mensaje.exito.complejidad.generada                            = Complejidad generada con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
@@ -963,6 +967,8 @@ menu.config.dependencias                      = Dependencias
 menu.config.dependencias.title                = Dependencias asociadas a semillas
 menu.config.complejidades                     = Complejidades
 menu.config.complejidades.title               = Complejidades asociadas a semillas
+menu.config.etiquetas                     = Etiquetas
+menu.config.etiquetas.title               = Etiquetas asociadas a semillas
 menu.config.observatory                       = Observatorio
 menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
@@ -1055,6 +1061,7 @@ migas.cuenta.cliente                                     = Cuenta Cliente
 migas.cuentas.cliente                                    = Cuentas Cliente
 migas.dependencias.observatorio                          = Dependencias
 migas.complejidades.observatorio                         = Complejidades
+migas.etiquetas.observatorio                         = Etiquetas
 migas.desinstalar.cartucho                               = Desinstalar Cartucho
 migas.diagnostico                                        = Servicio de Diagn\u00F3stico
 migas.edit.file.malware                                  = Editar fichero
@@ -1370,6 +1377,11 @@ nueva.complejidad.observatorio           = Nueva complejidad
 nueva.complejidad.observatorio.nombre    = Nombre de la complejidad
 nueva.complejidad.observatorio.profundidad    = Profundidad
 nueva.complejidad.observatorio.amplitud    = Amplitud
+nueva.etiqueta.observatorio           	= Nueva etiqueta
+nueva.etiqueta.observatorio.nombre    	= Nombre de la etiqueta
+nueva.etiqueta.observatorio.tematica    = Tematica
+nueva.etiqueta.observatorio.distribucion    = Distribucion
+nueva.etiqueta.observatorio.recurrencia    = Recurrencia
 nueva.semilla.google                     = Nueva semilla
 nueva.semilla.google.info                = (Se extraer\u00E1n 10 resultados por cada p\u00E1gina)
 nueva.semilla.google.nombreSemilla       = Nombre de la Semilla:
@@ -1395,6 +1407,11 @@ nueva.semilla.observatorio.url           = URL
 nueva.semilla.webs                       = Nueva Semilla
 nueva.semilla.webs.categoria             = Segmento
 nueva.semilla.webs.complejidad           = Complejidad
+nueva.semilla.webs.etiqueta           = Etiqueta
+nueva.semilla.webs.tematica           = Tematica
+nueva.semilla.webs.clasificacion           = Clasificacion
+nueva.semilla.webs.distribucion           = Distribucion
+nueva.semilla.webs.recurrencia           = Recurrencia
 nueva.semilla.webs.info                  = Se introducir\u00E1 una URL en cada l\u00EDnea. S\u00F3lamente las URLs v\u00E1lidas ser\u00E1n incluidas en el archivo.
 nueva.semilla.webs.informacion           = Informaci\u00F3n
 nueva.semilla.webs.introduccion.url      = Introducci\u00F3n de URL's
