--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -324,6 +324,9 @@ error.observatorio = Observatorio
 eliminar.rastreo.select = Debe marcar alguna ejecuci\u00F3n,
 error.file = Fichero
 error.dependendencia = Dependencia
+error.etiqueta                     = Etiqueta
+error.etiqueta                     = Clasificacion
+
 
 # LITERALES JSP
 campo.obligatorio = Campo obligatorio
@@ -392,6 +395,7 @@ migas.eliminar.semillas.observatorio = Eliminar Semilla
 migas.dependencias.observatorio = Dependencias
 migas.nueva.complejidad.observatorio = Nueva complejidad
 migas.complejidades.observatorio = Complejidades
+migas.etiquetas.observatorio                         = Etiquetas
 migas.nueva.dependencia.observatorio = Nueva dependencia
 migas.cartucho = Cartucho
 migas.editar.cartucho = Editar Cartucho
@@ -876,6 +880,7 @@ mensaje.error.nombre.dependencia.obligatorio= El nombre de la dependencia es obl
 
 gestion.complejidades.observatorio = Gesti\u00F3n de Complejidades del Observatorio
 gestion.complejidades.observatorio.titulo = Gesti\u00F3n de Complejidades del Observatorio
+gestion.etiquetas.observatorio.titulo = Gesti\u00F3n de Etiquetas del Observatorio
 nueva.complejidad.observatorio.nombre = Nombre de la complejidad
 nueva.complejidad.observatorio.profundidad    = Profundidad
 nueva.complejidad.observatorio.amplitud    = Amplitud
@@ -883,6 +888,13 @@ nueva.complejidad.observatorio = Nueva complejidad
 mensaje.error.nombre.complejidad.duplicado = Nombre de complejidad ya existente
 mensaje.exito.complejidad.generada = Complejidad generada con \u00E9xito.
 mensaje.exito.complejidad.eliminada = Complejidad eliminada con \u00E9xito.
+mensaje.exito.etiqueta.eliminada                           = Etiqueta eliminada con \u00E9xito.
+mensaje.exito.etiqueta.generada                            = Etiqueta generada con \u00E9xito.
+nueva.etiqueta.observatorio           	= Nueva etiqueta
+nueva.etiqueta.observatorio.nombre    	= Nombre de la etiqueta
+nueva.etiqueta.observatorio.tematica    = Tematica
+nueva.etiqueta.observatorio.distribucion    = Distribucion
+nueva.etiqueta.observatorio.recurrencia    = Recurrencia
 mensaje.error.nombre.complejidad.obligatorio = Todos los campos son obligatorios
 mensaje.error.campos.complejidad.numericos	= Profundidad y amplitud deben ser números positivos
 eliminar.semilla.observatorio = Eliminar Semilla del Observatorio
@@ -1191,7 +1203,8 @@ menu.config.dependencias.title = Dependencias asociadas a semillas
 
 menu.config.complejidades  = Complejidades
 menu.config.complejidades.title = Complejidades asociadas a semillas
-
+menu.config.etiquetas                     = Etiquetas
+menu.config.etiquetas.title               = Etiquetas asociadas a semillas
 menuadmin.conectividad = Conectividad
 menuadmin.conectividad.title = Comprobaci\u00F3n de la conectividad con servicios externos
 
@@ -1343,7 +1356,11 @@ nueva.semilla.webs.lista.url = Lista de URL's:
 nueva.semilla.webs.categoria = Segmento
 nueva.semilla.webs.ambito = Ambito
 nueva.semilla.webs.complejidad = Complejidad
-
+nueva.semilla.webs.etiqueta           = Etiqueta
+nueva.semilla.webs.tematica           = Tematica
+nueva.semilla.webs.clasificacion           = Clasificacion
+nueva.semilla.webs.distribucion           = Distribucion
+nueva.semilla.webs.recurrencia           = Recurrencia
 borrar.semilla.busqueda.nombre = Nombre
 editar.semilla.busqueda.nombre = Nombre
 
