Aggregate reports improvments: new graphics, dynamic tables...
Former-commit-id: 933399c83fd3e2ef8a5232db82917ffe8c8b72f3

--- a/portal/profiles/desarrollo/crawler.properties
+++ b/portal/profiles/desarrollo/crawler.properties
@@ -92,6 +92,7 @@ export.open.office.template.une.2012b.EELL = ${deploy.path}/WEB-INF/templatesODT
 
 export.open.office.template.common = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Generica_Observatorio.odt
 export.open.office.template.common.category = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Segmento.odt
+export.open.office.template.common.complexities = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Complejidad.odt
 
 export.open.office = ${files.path}/exports/openOffice/
 
