--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2382,6 +2382,7 @@ observatory.graphic.accessibility.evolution.approval.AA.title           = Evoluc
 observatory.graphic.accessibility.evolution.approval.NV.title           = Evoluci\u00F3n del Nivel de Conformidad de Accesibilidad: No V\u00E1lido
 observatory.graphic.accessibility.level.allocation.by.page.title        = Distribuci\u00F3n del Nivel de accesibilidad por p\u00E1ginas
 observatory.graphic.accessibility.level.allocation.name                 = DistribucionNivelAccesibilidadGlobal
+observatory.graphic.compilance.level.allocation.name					= DistribucionNivelCumplimientoGlobal
 observatory.graphic.accessibility.level.allocation.segment.name         = DistribucionNivelAccesibilidadS{0}
 observatory.graphic.accessibility.level.allocation.segment.title        = Distribuci\u00F3n del Nivel de Accesibilidad. {0}
 observatory.graphic.accessibility.level.allocation.title                = Distribuci\u00F3n del Nivel de accesibilidad global
@@ -2399,6 +2400,9 @@ observatory.graphic.evolution.verification.mid.puntuation.name          = Evoluc
 observatory.graphic.global.puntuation.allocation.segment.strached.name  = ComparacionPuntuacionSegmento
 observatory.graphic.global.puntuation.allocation.segment.strached.title = Comparaci\u00F3n de Puntuaci\u00F3n por Segmento
 observatory.graphic.global.puntuation.allocation.segments.mark.name     = ComparacionAdecuacionSegmento
+observatory.graphic.global.puntuation.compilance.segments.mark.name		= ComparacionCumpliminetoSegmento
+observatory.graphic.global.puntuation.compilance.complexitiviy.mark.name		= ComparacionCumpliminetoComplejidad
+observatory.graphic.global.puntuation.allocation.complexity.mark.name     = ComparacionAdecuacionComplejidad
 observatory.graphic.global.puntuation.allocation.segments.mark.title    = Comparaci\u00F3n de Adecuaci\u00F3n por Segmento
 observatory.graphic.mark.allocation.segment.name                        = DistribucionPuntuacionesS{0}
 observatory.graphic.mark.allocation.segment.title                       = Distribuci\u00F3n de Puntuaciones: {0}
@@ -3476,3 +3480,7 @@ xml.seed.not.valid = El fichero no contiene elementos válidos
 importar.semillas.title = Importaci\u00F3nn masiva de semillas
 importar.semillas.info = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
 importar.semillas.info2 = ¿Desea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3nn <strong>no se puede deshacer</strong>
+
+resultados.anonimos.porc.portales.nc = No conforme
+resultados.anonimos.porc.portales.pc = Parcialmente conforme
+resultados.anonimos.porc.portales.tc = Totalmente conforme
