Compilance Verfication comparision graphics
Former-commit-id: 861fb47bc68cbe65377e419c32d16e94df2bb38d

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2415,6 +2415,7 @@ observatory.graphic.evolution.mid.puntuation.name                       = Evoluc
 observatory.graphic.evolution.verification.mid.puntuation               = Evoluci\u00F3n de la Puntuaci\u00F3n Media por Verificaci\u00F3n. Verificaci\u00F3n {0}
 observatory.graphic.evolution.verification.mid.puntuation.name          = EvolucionPuntuacionMediaVerificacionV{0}
 observatory.graphic.global.puntuation.allocation.segment.strached.name  = ComparacionPuntuacionSegmento
+observatory.graphic.global.puntuation.allocation.complexitiviy.strached.name  = ComparacionPuntuacionComplejidad
 observatory.graphic.global.puntuation.allocation.segment.strached.title = Comparaci\u00F3n de Puntuaci\u00F3n por Segmento
 observatory.graphic.global.puntuation.allocation.segments.mark.name     = ComparacionAdecuacionSegmento
 observatory.graphic.global.puntuation.compilance.segments.mark.name		= ComparacionCumpliminetoSegmento
@@ -2451,6 +2452,17 @@ observatory.graphic.verification.mid.comparation.level.1.title          = Puntua
 observatory.graphic.verification.mid.comparation.level.2.cat.title      = Puntuaci\u00F3n Media por Verificaci\u00F3n: {0}. AA
 observatory.graphic.verification.mid.comparation.level.2.name           = ComparacionMediasVerificacionNAII
 observatory.graphic.verification.mid.comparation.level.2.title          = Puntuaci\u00F3n Media por Verificaci\u00F3n. AA
+observatory.graphic.verification.compilance.comparation.level.1.title =  Conformidad por Verificaci\u00F3n: {0}. A
+observatory.graphic.verification.compilance.comparation.level.1.name =  ComparacionConformidadVerificacionI
+
+observatory.graphic.verification.compilance.comparation.level.2.title =  Conformidad por Verificaci\u00F3n: {0}. AA
+observatory.graphic.verification.compilance.comparation.level.2.name =  ComparacionConformidadVerificacionII
+
+observatory.graphic.compilance.green                                      = Conforme
+observatory.graphic.compilance.red                                        = No conforme
+
+
+
 observatory.graphic.verification.points                                 = Puntos de Verificaci\u00F3n
 observatory.graphics.level.A                                            = A
 observatory.graphics.level.AA                                           = AA
